2009-04-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml/drtlist.xml: Delete old-style drtlists.

2009-04-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* templates:
	* templates/README:
	* templates/managed:
	* templates/Makefile.am:
	* templates/managed/App.xaml:
	* templates/managed/Makefile.am:
	* templates/managed/App.xaml.cs:
	* templates/managed/Control.xaml:
	* templates/managed/SampleTest.html:
	* templates/managed/Control.xaml.cs:
	* templates/test-screenshot-template.html: Add test templates.

2009-04-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml/input-test.html:
	* xaml/test-bubbling.html:
	* xaml/test-event-argcount.html:
	* xaml/test-empty-element-source.html:
	* xaml/assorted/test-collections.html:
	* xaml/assorted/test-stroke-collection.html: Include our
	  testplugin.js to report test results and handle
	  mouse/screenshot coordinates correctly.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* test.mdp: Updated some project files.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: We need to load the plugin from where the rest
	  of the assemblies are (in the prefix), otherwise moonlight
	  won't find the assemblies.

2009-03-25  Chris Toshok  <toshok@ximian.com>

	* uri-test.cpp: use accessors.

2009-03-25  Jeffrey Stedfast  <fejj@novell.com>

	* parsertest/parsertest.cpp (parse_value_test): Fixed
	value_from_str() calls to not pass an sl2 argument.

2009-03-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml/test-xaml.html:
	* xaml/test-parsererrors.html: New html files which will be
	  used in several tests.

2009-03-24  Chris Toshok  <toshok@ximian.com>

	* uri-test.cpp: s/protocol/scheme for Uris.

2009-03-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* demo.cs:
	* control.cs:
	* etest.xaml:
	* Makefile.am:
	* download.cs:
	* drtlist.xml:
	* xaml/drtlist.xml:
	* test-custom-element.cs:
	* xaml/test-custom-element.xaml: Delete some old files.

2009-03-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>
