@@ -1,15 +1,8 @@
 
-SUBDIRS=harness parsertest sizes objecttypes
+SUBDIRS=harness parsertest sizes
 
 if INCLUDE_BROWSER_MANAGED_CODE
 SUBDIRS += 2.0
-endif
-
-MOZ_PATH = `pwd`/$(top_builddir)/test/harness/shocker/.libs:$(pkglibdir)/plugin
-if HAVE_GECKO_1_9 
-LD_PATH = $(pkglibdir)/plugin:`pkg-config --variable=sdkdir mozilla-gtkmozembed`/lib
-else
-LD_PATH = $(pkglibdir)/plugin:`pkg-config --variable=libdir xulrunner-gtkmozembed`
 endif
 
 if INCLUDE_TESTING
@@ -18,57 +11,11 @@ else
 TESTING = echo ERROR: Test harness is disabled by configuration; false
 endif
 
-export MS_DRTLIST
-XEPHYR_DEFAULT=2
-
 check-testing:
 	$(TESTING)
 
 install-test-plugin: check-testing
 	$(MAKE) $(AM_MAKEFLAGS) -C harness/shocker install-test-plugin
-
-run-server: all check-testing
-	mono harness/test-runner/test-runner.exe -drtlist $(MS_DRTLIST) -runner-server
-
-run-logging-server: all check-testing
-	mono harness/test-runner/logging-server.exe
-
-run-gdb:
-	HARNESS_FLAGS="-gdb" $(MAKE) $(MAKEFLAGS) run-drtlist
-
-run-valgrind:
-	HARNESS_FLAGS="-valgrind" $(MAKE) $(MAKEFLAGS) run-drtlist
-
-run-xephyr:
-	(test -z "$$XEPHYR" && XEPHYR=$(XEPHYR_DEFAULT); export XEPHYR; echo Running Xephyr in display $$XEPHYR; \
-	test -z "$$DRT_TARGET" && DRT_TARGET="run-drtlist"; export DRT_TARGET; echo Executing target $$DRT_TARGET; \
-	test -n "$$MAKEFLAGS" && MFLAGS="-$$MAKEFLAGS"; export MFLAGS; echo Makeflags: $$MFLAGS; \
-	Xephyr -screen 1200x960 -ac -noreset :$$XEPHYR & xephyr_pid=$$!; \
-	sleep 1; \
-	DISPLAY=:$$XEPHYR xsetroot -solid '#ffffff'; \
-	DISPLAY=:$$XEPHYR $(MAKE) $(MFLAGS) $$DRT_TARGET; \
-	kill $$xephyr_pid)
-
-run-drtlist: all check-testing
-	(GNOME_DISABLE_CRASH_DIALOG=1 MOZ_PLUGIN_PATH=$(MOZ_PATH) LD_LIBRARY_PATH=$(LD_PATH):$(LD_LIBRARY_PATH) mono --debug harness/test-runner/test-runner.exe -drtlist $(DRTLIST) -agviewer $(top_srcdir)/test/harness/agviewer/agviewer -v -v -v -html-report -run-known-failures $(HARNESS_FLAGS))
-
-run-tests:
-	DRTLIST=$(top_builddir)/test/xaml/drtlist.xml $(MAKE) run-drtlist
-
-run-ms-tests:
-	DRTLIST=$(MS_DRTLIST) $(MAKE) run-drtlist
-
-run-test:
-	$(MAKE) run-test-impl
-
-run-test-impl:
-	GNOME_DISABLE_CRASH_DIALOG=1 MOZ_PLUGIN_PATH=$(MOZ_PATH) LD_LIBRARY_PATH=$(LD_PATH):$(LD_LIBRARY_PATH) $(TEST_COMMAND) $(top_srcdir)/test/harness/agviewer/agviewer $(DRTTEST) 
-
-run-test-gdb:
-	TEST_COMMAND="gdb --eval-command=run --args" $(MAKE) run-test-impl
-
-run-test-valgrind:
-	TEST_COMMAND="valgrind" $(MAKE) run-test-command
 
 run-unit-tests:
 	$(MAKE) -C 2.0/moon-unit test
